# scryme

./: .gitignore  404.html  CLAUDE.md  CNAME  Jenkinsfile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  sitemap.xml  sonar-project.properties
backend/: Dockerfile  Dockerfile.dev  alembic.ini  docker-entrypoint.dev.sh  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/src/: __init__.py  admin_stats.py  backup.py  checklists.py  cli.py  collection_edit.py  config.py  currency.py  db.py  deck_import.py  decks.py  demo.py  desktop_entry.py  facets.py  import_undo.py  lan.py  main.py  price_watch.py  prices.py  saved_alerts.py  scheduler.py  sets.py  stats.py  tags.py  templating.py  wishlist.py
backend/tests/: conftest.py  test_admin_dashboard.py  test_advanced_route.py  test_api.py  test_backup.py  test_binders.py  test_card_route.py  test_checklists.py  test_cli.py  test_collection_edit.py  test_config.py  test_currency.py  test_deck_import.py  test_decks.py  test_demo.py  test_demo_seed.py  test_export_route.py  test_facets.py  test_health.py  test_home.py  test_import_undo.py  test_import_wizard.py  test_importers_delver.py  test_importers_dragonshield.py  test_importers_moxfield.py  test_ingest_filter.py  test_lan.py  test_price_watch.py  test_prices.py  test_saved_alerts.py  test_saved_route.py  test_search_compile.py  test_search_extra.py  test_search_parser.py  test_search_route.py  test_search_sort.py  test_sets.py  test_stats.py  test_tags.py  test_trade.py  (+2 more)
desktop/: README.md  (+4 more)
(+170 files in other folders)
